@@ -29,10 +29,15 @@ AM_MAINTAINER_MODE
 AC_PROG_CC
 AC_PROG_INSTALL
 
+XORG_PROG_RAWCPP
+AC_DEFINE_UNQUOTED(CPP_PROGRAM, "${RAWCPP}", 
+	[Default C pre-processor for Imake to use])
+
 # Checks for pkg-config packages
 PKG_CHECK_MODULES(XPROTO, xproto)
 AC_SUBST(XPROTO_CFLAGS)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile])
