@@ -1,3 +1,10 @@
+2005-11-12  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* configure.ac: 
+	* Makefile.am:
+	Substitute variables in man pages
+	Set CPP_PROGRAM to path to cpp
+
 2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
